k8s/Frontend/login-pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
  namespace: myapp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
      - name: login-app
        image: ghcr.io/spaxqwii/freshstarts_k8s:v1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      imagePullSecrets:
      - name: ghcr-cred
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
