k8s/Frontend/login-pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app-service
  namespace: myapp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: NodePort
  selector:
    app: login-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32137
