k8s/Frontend/login-pg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app-ingress
  namespace: myapp
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: login-pg.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
